--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 
 ul {
@@ -15,8 +16,17 @@ a {
     color: #e5e7eb;
 }
 
+
+button {
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    border-radius: 8px;
+}
+
 img {
-    width: 450px;
+    height: 450px;
+    width: auto;
 }
 
 .header,
@@ -32,6 +42,19 @@ img {
 }
 
 
+.banner {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 450px;
+}
+
+
+.textgrp {
+    display: flex;
+    flex-direction: column;
+    padding: 128px;
+    gap: 16px;
+}
 
 .herotext {
     font-size: 48px;
@@ -42,6 +65,21 @@ img {
 .subtext {
     font-size: 18px;
     color: #e5e7eb;
+    flex-wrap: wrap;
+    width: 400px;
+}
+
+.signup {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    flex-shrink: 0;
+    height: 35px;
+    width: 100px;
+}
+
+.image {
+    padding-right: 128px;
 }
 
 .logo {
