--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,10 @@ button {
 }
 
 img {
-    height: 450px;
-    width: auto;
+    flex: 0 0 auto;
+    max-height: 95%;
+    max-width: 95%;
+    border-radius: 75%;
 }
 
 .header,
@@ -94,3 +96,36 @@ img {
     gap: 32px;
     padding-right: 64px;
 }
+
+
+.sectionOne {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.cards {
+    display: flex;
+    padding-top: 64px;
+    padding-left: 128px;
+    justify-content: space-between;
+}
+
+.card {
+    border: 1px solid royalblue;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+    padding: 16px;
+    height: 200px;
+    width: 300px;
+    margin: 16px;
+}
+
+.cardsDesc {
+    height: 150px;
+    width: 500px;
+    font-size: 48px;
+    font-weight: 600;
+    padding: 128px;
+}
+
