--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ img {
     justify-content: center;
     align-content: center;
     padding: 120px;
+    flex: 1;
 }
 
 .modal {
@@ -204,5 +205,20 @@ img {
     height: 35px;
     width: 100px;
     align-self: center;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+    padding-left:  10px;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 5px;  
+    background-color: #1F2937; 
+    color: #f9faf8;
+    font-weight: 400;
+    padding: 24px;
 }
 
