--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ ul {
 
 a {
     text-decoration: none;
-    color: #e5e7eb;
+    color: #0C1618;
 }
 
 
@@ -34,7 +34,7 @@ img {
 .header,
 .banner {
     display: flex;
-    background-color: #1F2937;
+    background-color: #DDD8C4;
 }
 
 .header {
@@ -61,18 +61,18 @@ img {
 .herotext {
     font-size: 48px;
     font-weight: bolder;
-    color: #f9faf8;
+    color: #0C1618;
 }
 
 .subtext {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #756D54;
     flex-wrap: wrap;
     width: 400px;
 }
 
 .signup {
-    background-color: #3882f6;
+    background-color: #507DBC;
     color: #f9faf8;
     font-weight: bold;
     flex-shrink: 0;
@@ -85,7 +85,7 @@ img {
 }
 
 .logo {
-    color: white;
+    color: #0C1618;
     font-weight: 700;
     font-size: 32px;
     padding-left: 64px;
@@ -114,7 +114,7 @@ img {
 }
 
 .card {
-    border: 1px solid royalblue;
+    border: 1px solid #507DBC;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
     padding: 16px;
@@ -138,7 +138,7 @@ img {
     align-items: center;
     justify-content: center;
     height: 450px;
-    background-color: #e5e7eb;
+    background-color: #ddd8c4;
     padding: 100px;
 }
 
@@ -162,7 +162,7 @@ img {
 }
 
 .modal {
-    background: #3882f6;
+    background: #507DBC;
     width: 480px;
     border-radius: 10px;
     box-shadow: 2px 4px 16px rgba(0,0,0,.2);
@@ -199,7 +199,7 @@ img {
 
 .signup2 {
     background-color: #f9faf8;
-    color: #3882f6;
+    color: #0c1618;
     font-weight: bold;
     flex-shrink: 0;
     height: 35px;
@@ -216,9 +216,8 @@ img {
     padding-top: 5px;
     padding-right: 10px;
     padding-bottom: 5px;  
-    background-color: #1F2937; 
-    color: #f9faf8;
+    background-color: #756D54; 
+    color: #ddd8c4;
     font-weight: 400;
     padding: 24px;
 }
-
